// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TO CLASSNAMES, sheet NATIVE 1`] = `
Object {
  "label": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          "color: blue /*sheet.label*/",
        ],
      },
    ],
    "name": "label",
    "~": "c",
  },
  "nativeOnly": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          "margin: 20 /*sheet.nativeOnly/$native*/",
        ],
      },
    ],
    "name": "nativeOnly",
    "~": "c",
  },
  "root": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          "margin: 4 /*sheet.root[0]*/",
          "padding: 4 /*sheet.root[0]*/",
        ],
      },
      Object {
        "atomicArray": Array [
          "padding: 10 /*sheet.root[1]/$native*/",
        ],
      },
    ],
    "name": "root",
    "~": "c",
  },
}
`;

exports[`TO CLASSNAMES, sheet WEB 1`] = `
Object {
  "label": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          ".d { color:blue /*sheet.label*/ }",
        ],
      },
    ],
    "name": "label",
    "~": "c",
  },
  "root": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          ".a { margin:4px /*sheet.root[0]*/ }",
          ".b { padding:4px /*sheet.root[0]*/ }",
        ],
      },
      Object {
        "atomicArray": Array [
          ".c { margin:10px /*sheet.root[0]/$web*/ }",
        ],
      },
    ],
    "name": "root",
    "~": "c",
  },
  "webOnly": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          ".e { color:red /*sheet.webOnly/$web*/ }",
          ".f { padding:20px /*sheet.webOnly/$web*/ }",
        ],
      },
    ],
    "name": "webOnly",
    "~": "c",
  },
}
`;

exports[`TO CLASSNAMES, using sheet NATIVE 1`] = `
Array [
  "
##########################################
##########################################
#
#  NATIVE: root, label, nativeOnly
#
##########################################
##########################################
",
  "
******************************************
*  QUERY TO STHEET
******************************************
",
  Array [
    "margin: 4 /*sheet.root[0]*/",
    "padding: 4 /*sheet.root[0]*/",
    "padding: 10 /*sheet.root[1]/$native*/",
    "color: blue /*sheet.label*/",
    "margin: 20 /*sheet.nativeOnly/$native*/",
  ],
  "
******************************************
*  APPLY LASTWINS STRATEGY
******************************************
",
  "
margin: 20 /*sheet.nativeOnly/$native*/
color: blue /*sheet.label*/
padding: 10 /*sheet.root[1]/$native*/",
  "
******************************************
*  FINALIZE FOR for web's className or native's style
******************************************
",
  Object {
    "color": "blue",
    "margin": 20,
    "padding": 10,
  },
]
`;

exports[`TO CLASSNAMES, using sheet NATIVE 2`] = `
Array [
  "
##########################################
##########################################
#
#  NATIVE: nativeOnly, root
#
##########################################
##########################################
",
  "
******************************************
*  QUERY TO STHEET
******************************************
",
  Array [
    "margin: 20 /*sheet.nativeOnly/$native*/",
    "margin: 4 /*sheet.root[0]*/",
    "padding: 4 /*sheet.root[0]*/",
    "padding: 10 /*sheet.root[1]/$native*/",
  ],
  "
******************************************
*  APPLY LASTWINS STRATEGY
******************************************
",
  "
padding: 10 /*sheet.root[1]/$native*/
margin: 4 /*sheet.root[0]*/",
  "
******************************************
*  FINALIZE FOR for web's className or native's style
******************************************
",
  Object {
    "margin": 4,
    "padding": 10,
  },
]
`;

exports[`TO CLASSNAMES, using sheet WEB 1`] = `
Array [
  "
##########################################
##########################################
#
#  WEB: root, label, webOnly
#
##########################################
##########################################
",
  "
******************************************
*  QUERY TO STHEET
******************************************
",
  "
.a { margin:4px /*sheet.root[0]*/ }
.b { padding:4px /*sheet.root[0]*/ }
.c { margin:10px /*sheet.root[0]/$web*/ }
.d { color:blue /*sheet.label*/ }
.e { color:red /*sheet.webOnly/$web*/ }
.f { padding:20px /*sheet.webOnly/$web*/ }",
  "
******************************************
*  APPLY LASTWINS STRATEGY
******************************************
",
  "
.f { padding:20px /*sheet.webOnly/$web*/ }
.e { color:red /*sheet.webOnly/$web*/ }
.c { margin:10px /*sheet.root[0]/$web*/ }",
  "
******************************************
*  FINALIZE FOR for web's className or native's style
******************************************
",
  "f e c",
]
`;

exports[`TO CLASSNAMES, using sheet WEB 2`] = `
Array [
  "
##########################################
##########################################
#
#  WEB: webOnly, root
#
##########################################
##########################################
",
  "
******************************************
*  QUERY TO STHEET
******************************************
",
  "
.e { color:red /*sheet.webOnly/$web*/ }
.f { padding:20px /*sheet.webOnly/$web*/ }
.a { margin:4px /*sheet.root[0]*/ }
.b { padding:4px /*sheet.root[0]*/ }
.c { margin:10px /*sheet.root[0]/$web*/ }",
  "
******************************************
*  APPLY LASTWINS STRATEGY
******************************************
",
  "
.c { margin:10px /*sheet.root[0]/$web*/ }
.b { padding:4px /*sheet.root[0]*/ }
.e { color:red /*sheet.webOnly/$web*/ }",
  "
******************************************
*  FINALIZE FOR for web's className or native's style
******************************************
",
  "c b e",
]
`;
